Partially fix layout of the navigation on narrow screens.
li.separator style items are still broken.

--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -185,7 +185,7 @@ ul.featured-projects a.img {
 		width: 50%;
 		vertical-align: top;*/
 	}
-	#navigation nav li {
+	#navigation nav > ul > li {
 		-webkit-box-sizing: border-box;
 		   -moz-box-sizing: border-box;
 		        box-sizing: border-box;
@@ -206,7 +206,7 @@ ul.featured-projects a.img {
 }
 
 @media screen and (max-width: 600px) {
-	#navigation nav li {
+	#navigation nav > ul > li {
 		width: 50%;
 	}
 
@@ -217,7 +217,7 @@ ul.featured-projects a.img {
 }
 
 @media screen and (max-width: 480px) {
-	#navigation nav li {
+	#navigation nav > ul > li {
 		width: auto;
 		display: block;
 	}
